# GroupPikDeveloper

./: .gitignore  README.md
GDP/: CMakeLists.txt  GDP.opensdf  GDP.sln  Readme.txt  ReadmeCmake.txt
GDP/CMake/: FindSQLite3.cmake  Macros.cmake  PlatformLinux.cmake  PlatformWindows.cmake
GDP/GDP/: CMakeLists.txt  GDP.vcxproj  GDP.vcxproj.filters  camerawidget.cpp  camerawidget.h  camerawidget.ui  gdp.cpp  gdp.h  gdp.qrc  gdp.ui  groupview.cpp  groupview.h  groupview.ui  groupviewsettings.cpp  groupviewsettings.h  groupviewsettings.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  tcpclient.cpp  tcpclient.h  test.ui
GDP/GDP/GeneratedFiles/: qrc_gdp.cpp  ui_camerawidget.h  ui_gdp.h  ui_logindialog.h  ui_test.h
GDP/GDP/GeneratedFiles/Debug/: moc_logindialog.cpp
GDP/GDP/GeneratedFiles/Release/: moc_camerawidget.cpp  moc_gdp.cpp
GDP/GDPMessages/: CMakeLists.txt  GDPMessages.vcxproj  GDPMessages.vcxproj.filters  gdpmessages.cpp  gdpmessages.h  gdpmessages_global.h  messagebase.cpp  messagebase.h  messagefail.cpp  messagefail.h  messagefile.cpp  messagefile.h  messagegroupadd.cpp  messagegroupadd.h  messagegroupedit.cpp  messagegroupedit.h  messagelogin.cpp  messagelogin.h  messagesuccess.cpp  messagesuccess.h
GDP/GDPServer/: CMakeLists.txt  GDPServer.vcxproj  GDPServer.vcxproj.filters  database.cpp  database.h  main.cpp  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h
GDP/GDPServer/GeneratedFiles/Debug/: moc_database.cpp  moc_tcpserver.cpp  moc_tcpsocket.cpp
GDP/Libs/sqlite3/x64/Windows/: sqlite3.lib
GPDServer/GPDServer/: GPDServer.pro  main.cpp  tcpserver.cpp  tcpserver.h
GroupPikDeveloper/: GroupPikDeveloper.pro  cameradialog.ui  camerawidget.h  camerawidget.ui  logindialog.cpp  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclient.cpp  tcpclient.h
